lang/tests/compile_fail/pod_string_invalid_pfx.stderr
error[E0080]: evaluation panicked: PodString<N, PFX>: PFX must be 1, 2, 4, or 8
 --> $RUST/core/src/panic.rs
  |
  = note: evaluation of `quasar_lang::String::<10, 3>::_CAP_CHECK` failed here
  |
 ::: $WORKSPACE/pod/src/string.rs
  |
  | /         assert!(
  | |             PFX == 1 || PFX == 2 || PFX == 4 || PFX == 8,
  | |             "PodString<N, PFX>: PFX must be 1, 2, 4, or 8"
  | |         );
  | |_________- in this macro invocation

note: erroneous constant encountered
 --> $WORKSPACE/pod/src/string.rs
  |
  |     pub const VALID: () = Self::_CAP_CHECK;
  |                           ^^^^^^^^^^^^^^^^

note: erroneous constant encountered
 --> tests/compile_fail/pod_string_invalid_pfx.rs:6:15
  |
6 | const _: () = PodString::<10, 3>::VALID;
  |               ^^^^^^^^^^^^^^^^^^^^^^^^^
